--- a/css/custom.css
+++ b/css/custom.css
@@ -76,6 +76,11 @@ a:hover {
 /*!
  * 5374.jpについて
  */
+#accordion3 a {
+	color: #000000;
+	text-decoration: underline;
+}
+
 #accordion3 a.accordion-toggle-top {
 	color: #000000;
 	height: 22px;
